Issue 1078: UI fixes for inbox/messaging feature (#1086)
* resolve merge conflit

* fix(Online User Count): add mizzao's meteor-user-status package

adding back mizzao's meteor-user-status package, it was removed previously because it wasn't working
with the current meteor version (1.7).

#989 #1080

* added username styling and fixed modal cancellation button alignment

* comment out console logs and fix message bubble styling

* Make participant usernames clickable to their profiles, and also add link to CoC in the report modal

* Fix extra space in mobile view by making div max-height instead of specific height

* Fix nav UI issue

* rename messge to message, add a send icon, and apply bubbly styling to chat messages

* Let users submit a message by clicking on the send icon too (useful for mobile users)

--- a/client/css/_colors.scss
+++ b/client/css/_colors.scss
@@ -17,6 +17,7 @@ $hangout-silent: #d9534f;
 $icon-silent: #d9534f;
 $icon-teaching: #f0ad4e;
 $icon-collab: #7ed321;
+$inbox-green: #9acd32;
 $divider: #e1e1e1;
 $inactive: #cfcfcf;
 $warm-grey: #9b9b9b;
